--- a/#sources/scss/partials/ibg.scss
+++ b/#sources/scss/partials/ibg.scss
@@ -1,18 +1,18 @@
 //=======================================================================================
 //*подключение фонового изображения на главный экран вариант 2 без кода в js
 //=======================================================================================
-.ibg {
-  position: relative;
-}
+// .ibg {
+//   position: relative;
+// }
 
-.ibg img {
-  position  : absolute;
-  width     : 100%;
-  height    : 100%;
-  top       : 0;
-  left      : 0;
-  object-fit: cover;
-}
+// .ibg img {
+//   position  : absolute;
+//   width     : 100%;
+//   height    : 100%;
+//   top       : 0;
+//   left      : 0;
+//   object-fit: cover;
+// }
 
 //!для изображения задать
 
@@ -45,27 +45,28 @@
 //=======================================================================================
 //*подключение фонового изображения на главный экран вариант 1 с кодом в js
 //=======================================================================================
-// .ibg {
-//   background-position: center;
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   img {
-//     display: none;
-//   }
-// }
+.ibg {
+  background-position: center;
+  background-size    : cover;
+  background-repeat  : no-repeat;
+
+  img {
+    display: none;
+  }
+}
 
 //!для изображения задать
 
-.mainblock {
-  position: relative;
+// .mainblock {
+//   position: relative;
 
-  &__image {
-    position: fixed;
-    width   : 100%;
-    height  : 100%;
-    top     : 0;
-    left    : 0;
-  }
-}
+//   &__image {
+//     position: fixed;
+//     width   : 100%;
+//     height  : 100%;
+//     top     : 0;
+//     left    : 0;
+//   }
+// }
 
 //==============================================================================================================
