--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -39,6 +39,7 @@ $bgcolor:#263238; //цвет футера и меню
 // @import "footer.scss";
 // @import "partials/slider_slick.scss";
 // @import "partials/spollers.scss";
+@import "partials/ibg.scss";
 
 
 // @import "baguetteBox.scss"; //Для просмотра картинки при нажатии на нее sliders.scss
@@ -142,16 +143,81 @@ $bgcolor:#263238; //цвет футера и меню
   }
 }
 
+//====================================================================================================
+
+//====================================================================================================
+//section search
+//====================================================================================================
+.search {
+  position  : relative;
+  min-height: 533px;
+
+  &__inner {
+    padding: 156px 0px 100px 0px;
+  }
+
+  &__title {
+    font-size  : 4.8rem;
+    font-weight: 700;
+    color      : #fff;
+    padding    : 0px 0px 34px 0px;
+    text-align : center;
+
+  }
+
+  &__text {
+    color        : #fff;
+    font-size    : 2rem;
+    line-height  : 30px;
+    text-align   : center;
+    font-weight  : 500;
+    margin-bottom: 50px;
+  }
+
+  &__form {
+    position: relative;
+
+    &::placeholder {
+      font-size: 1.4rem;
+      color    : #90a4ae;
+    }
+
+    max-width: 670px;
+    margin   : 0px auto;
+    width    : 100%;
+
+    input {
+      display      : block;
+      width        : 100%;
+      height       : 56px;
+      padding      : 0px 50px 0px 20px;
+      box-shadow   : 0px 1px 10px 0px rgba(124, 178, 64, 0.75);
+      border-radius: 4px;
+
+    }
+
+    button {
+      position        : absolute;
+      top             : 20px;
+      left            : 625px;
+      background-color: transparent;
+
+    }
+  }
+
+  &__image {
+    position: absolute;
+    width   : 100%;
+    height  : 100%;
+    top     : 0;
+    left    : 0;
+    z-index : -1;
+  }
+}
 
 
-//===================================================================================================================
 
-//===================================================================================================================
-//section 
-//===================================================================================================================
-
-
-//===================================================================================================================
+//====================================================================================================
 //section 
 //===================================================================================================================
 
