--- a/css/style.css
+++ b/css/style.css
@@ -1034,6 +1034,15 @@ template {
   }
 }
 
+.ibg {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.ibg img {
+  display: none;
+}
+
 .page {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -1102,6 +1111,78 @@ template {
   font-size: 1.4rem;
   color: #fff;
   line-height: 30px;
+}
+
+.search {
+  position: relative;
+  min-height: 533px;
+}
+.search__inner {
+  padding: 156px 0px 100px 0px;
+}
+.search__title {
+  font-size: 4.8rem;
+  font-weight: 700;
+  color: #fff;
+  padding: 0px 0px 34px 0px;
+  text-align: center;
+}
+.search__text {
+  color: #fff;
+  font-size: 2rem;
+  line-height: 30px;
+  text-align: center;
+  font-weight: 500;
+  margin-bottom: 50px;
+}
+.search__form {
+  position: relative;
+  max-width: 670px;
+  margin: 0px auto;
+  width: 100%;
+}
+.search__form::-webkit-input-placeholder {
+  font-size: 1.4rem;
+  color: #90a4ae;
+}
+.search__form::-moz-placeholder {
+  font-size: 1.4rem;
+  color: #90a4ae;
+}
+.search__form:-ms-input-placeholder {
+  font-size: 1.4rem;
+  color: #90a4ae;
+}
+.search__form::-ms-input-placeholder {
+  font-size: 1.4rem;
+  color: #90a4ae;
+}
+.search__form::placeholder {
+  font-size: 1.4rem;
+  color: #90a4ae;
+}
+.search__form input {
+  display: block;
+  width: 100%;
+  height: 56px;
+  padding: 0px 50px 0px 20px;
+  -webkit-box-shadow: 0px 1px 10px 0px rgba(124, 178, 64, 0.75);
+          box-shadow: 0px 1px 10px 0px rgba(124, 178, 64, 0.75);
+  border-radius: 4px;
+}
+.search__form button {
+  position: absolute;
+  top: 20px;
+  left: 625px;
+  background-color: transparent;
+}
+.search__image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 /*==========  Desktop First Method  ==========*/
