--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -68,8 +68,6 @@ $bgcolor:#263238; //цвет футера и меню
     height         : 90px;
   }
 
-  &__logo {}
-
   &__text {
     margin-left : auto;
     margin-right: 50px;
@@ -81,10 +79,6 @@ $bgcolor:#263238; //цвет футера и меню
       color: #e74c3c;
     }
   }
-
-
-
-  &__box {}
 
   &__btn {
     font-size  : 1.2rem;
@@ -110,16 +104,11 @@ $bgcolor:#263238; //цвет футера и меню
     background-color: $bgcolor;
   }
 
-  &__menu {}
 }
 
 .basket {}
 
 .menu {
-
-  &__icon {}
-
-  &__body {}
 
   &__list {
     height     : 60px;
@@ -215,39 +204,311 @@ $bgcolor:#263238; //цвет футера и меню
   }
 }
 
+//====================================================================================================
+//section products
+//====================================================================================================
+.products {
+  padding: 100px 0px 0px 0px;
 
+  &__title {
+    color: #263238;
+  }
+
+  &__inner {
+    padding         : 30px 0px 110px 0px;
+    background-color: #f4f6f5;
+  }
+
+  &__btn {
+
+    text-align   : center;
+    margin-bottom: 60px;
+
+    button {
+      padding         : 12px 21px;
+      background-color: #fff;
+      color           : #263238;
+
+      &.mixitup-control-active {
+        background-color: #e74c3c;
+        color           : #fff;
+      }
+    }
+
+    button+button {
+      margin-left: 6px;
+    }
+  }
+
+  &__row {
+    display: flex;
+
+    justify-content: flex-start;
+    flex-wrap      : wrap;
+    margin         : 0px -15px;
+  }
+
+  &__item {}
+
+  &__column {
+    flex   : 0 1 25%;
+    padding: 0px 15px;
+
+
+  }
+
+  &__btn-bottom {
+    text-align : center;
+    padding-top: 45px;
+
+
+    button {
+      padding         : 21px 32px;
+      background-color: #fff;
+      color           : #263238;
+      box-shadow      : 0px 1px 3px 0px rgba(204, 216, 228, 0.75);
+
+      &.mixitup-control-active {
+        background-color: #e74c3c;
+        color           : #fff;
+      }
+    }
+
+
+    button+button {
+      margin-left: 12px;
+    }
+  }
+}
+
+.title {
+  font-size  : 36px;
+  font-weight: 700;
+  line-height: 60px;
+  text-align : center;
+}
+
+
+.item {
+  max-width    : 442px;
+  width        : 100%;
+  margin-bottom: 30px;
+  box-shadow   : 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+
+  &__image {
+    min-height: 250px;
+    display   : block;
+  }
+
+  &__content {
+    display        : flex;
+    justify-content: space-between;
+    min-height     : 90px;
+    border-bottom  : 1px solid #e7ecf2;
+
+  }
+
+  &__name {
+    padding    : 30px 0px 0px 35px;
+    max-width  : 310px;
+    font-weight: 500;
+
+    a {
+      display: block;
+
+      &+a {
+        margin: 15px 0px 0px 0px;
+      }
+    }
+
+  }
+
+  &__title {
+
+    font-size: 1.8rem;
+  }
+
+  &__category {
+    color    : #8bc34a;
+    font-size: 1.4rem;
+  }
+
+
+
+  &__price {
+    padding    : 35px 30px 0px 0px;
+    font-size  : 20px;
+    font-weight: 700;
+  }
+
+  &__info {
+    font-size  : 1.4rem;
+    color      : #546e7a;
+    display    : flex;
+    align-items: center;
+    padding    : 0px 0px 0px 35px;
+  }
+
+  &__img {
+    height: 30px;
+    width : 30px;
+
+    img {}
+  }
+
+  &__author {
+    display        : flex;
+    justify-content: space-between;
+    align-items    : center;
+    min-height     : 70px;
+  }
+
+  &__nik {
+
+    padding-left: 15px;
+    max-width   : 285px;
+    font-size   : 1.4rem;
+    font-weight : 500;
+    color       : #546e7a;
+  }
+
+  &__star {
+    padding-right: 30px;
+    font-size    : 1.2rem;
+    font-weight  : 400;
+    color        : #263238;
+  }
+}
+
+//====================================================================================================
+//====================================================================================================
+//section slider
+//====================================================================================================
+.slider {
+  padding: 117px 0px;
+
+  &__title {
+    margin: 0px 0px 60px 0px;
+  }
+
+  &__body {
+    display        : flex;
+    justify-content: space-between;
+  }
+
+  &__item {}
+}
+
+
+.slick-slider {
+  position : relative;
+  max-width: 100%;
+  margin   : 0px auto;
+
+  .slick-track,
+  .slick-list {
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform   : translate3d(0, 0, 0);
+    -ms-transform    : translate3d(0, 0, 0);
+    -o-transform     : translate3d(0, 0, 0);
+    transform        : translate3d(0, 0, 0);
+  }
+
+  .slick-list {
+    position: relative;
+    overflow: hidden;
+    width   : 100%;
+  }
+
+  .slick-track {
+    position: relative;
+    width   : 100%;
+  }
+
+  .slick-slide {
+    overflow: hidden;
+    float   : left;
+    position: relative;
+  }
+
+  .slick-dots {
+    @include flexbox();
+    justify-content: center;
+    align-items    : center;
+    padding        : 67px 0px 0px 0px;
+
+    li {
+      margin: 0px 7px 0px 0px;
+
+      button {
+        font-size       : 0;
+        width           : 15px;
+        height          : 15px;
+        border-radius   : 50%;
+        border          : 1px solid #c8c8c8;
+        background-color: transparent;
+      }
+
+      &.slick-active {
+        button {
+          background-color: #8bc34a;
+        }
+      }
+    }
+  }
+
+  /* Стрелка */
+  .slick-arrow {
+    position : absolute;
+    top      : 50%;
+    margin   : -45px 0px 0px 0px;
+    z-index  : 10;
+    font-size: 0; //убираем надписи на кнопках
+    width    : 20px;
+    height   : 60px;
+  }
+
+  /* Стрелка влево */
+  .slick-arrow.slick-prev {
+    background: url("../img/icon/sl-arrow_l.svg") 0 0 / 100% no-repeat;
+    left      : 0;
+  }
+
+  /* Стрелка вправо */
+  .slick-arrow.slick-next {
+    background: url("../img/icon/sl-arrow_r.svg") 0 0 / 100% no-repeat;
+    right     : 0;
+  }
+
+  /* Стрелка не активная */
+  .slick-arrow.slick-disabled {
+    opacity: 0.4;
+  }
+}
 
 //====================================================================================================
 //section 
-//===================================================================================================================
+//====================================================================================================
 
-//=====================================================================================================================
+//====================================================================================================
 //section 
-//=====================================================================================================================
+//====================================================================================================
 
-//====================================================================================================================
+//====================================================================================================
 //section 
-//====================================================================================================================
+//====================================================================================================
 
-//===================================================================================================================
+//====================================================================================================
 //section 
-//===================================================================================================================
+//====================================================================================================
 
-//====================================================================================================================
+//====================================================================================================
 //section 
-//====================================================================================================================
+//====================================================================================================
 
-//====================================================================================================================
-//section 
-//====================================================================================================================
+//====================================================================================================
 
-//====================================================================================================================
-//section 
-//====================================================================================================================
-
-//====================================================================================================================
-
-//===================================================================================================================================
+//====================================================================================================
 
 //<ОСНОВНОЙ БЛОК>====================================================================================================
 
