--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -148,9 +148,11 @@ $bgcolor:#263238; //цвет футера и меню
   &__title {
     font-size  : 4.8rem;
     font-weight: 700;
-    color      : #fff;
-    padding    : 0px 0px 34px 0px;
-    text-align : center;
+    font-family: "Roboto",
+      sans-serif;
+    color     : #fff;
+    padding   : 0px 0px 34px 0px;
+    text-align: center;
 
   }
 
@@ -208,15 +210,17 @@ $bgcolor:#263238; //цвет футера и меню
 //section products
 //====================================================================================================
 .products {
-  padding: 100px 0px 0px 0px;
+  padding         : 100px 0px 0px 0px;
+  background-color: #f4f6f5;
 
   &__title {
-    color: #263238;
+    color : #263238;
+    margin: 0px 0px 30px 0px;
   }
 
   &__inner {
-    padding         : 30px 0px 110px 0px;
-    background-color: #f4f6f5;
+    padding: 30px 0px 110px 0px;
+
   }
 
   &__btn {
@@ -255,6 +259,7 @@ $bgcolor:#263238; //цвет футера и меню
     padding: 0px 15px;
 
 
+
   }
 
   &__btn-bottom {
@@ -284,8 +289,9 @@ $bgcolor:#263238; //цвет футера и меню
 .title {
   font-size  : 36px;
   font-weight: 700;
-  line-height: 60px;
-  text-align : center;
+  font-family: "Roboto",
+    sans-serif;
+  text-align: center;
 }
 
 
@@ -312,6 +318,8 @@ $bgcolor:#263238; //цвет футера и меню
     padding    : 30px 0px 0px 35px;
     max-width  : 310px;
     font-weight: 500;
+    font-family: "Roboto",
+      sans-serif;
 
     a {
       display: block;
@@ -326,11 +334,15 @@ $bgcolor:#263238; //цвет футера и меню
   &__title {
 
     font-size: 1.8rem;
+    font-family: "Roboto",
+      sans-serif;
   }
 
   &__category {
     color    : #8bc34a;
     font-size: 1.4rem;
+    font-family: "Roboto",
+      sans-serif;
   }
 
 
@@ -339,10 +351,14 @@ $bgcolor:#263238; //цвет футера и меню
     padding    : 35px 30px 0px 0px;
     font-size  : 20px;
     font-weight: 700;
+    font-family: "Roboto",
+      sans-serif;
   }
 
   &__info {
-    font-size  : 1.4rem;
+    font-size: 1.4rem;
+    font-family: "Roboto",
+      sans-serif;
     color      : #546e7a;
     display    : flex;
     align-items: center;
@@ -352,8 +368,6 @@ $bgcolor:#263238; //цвет футера и меню
   &__img {
     height: 30px;
     width : 30px;
-
-    img {}
   }
 
   &__author {
@@ -369,14 +383,18 @@ $bgcolor:#263238; //цвет футера и меню
     max-width   : 285px;
     font-size   : 1.4rem;
     font-weight : 500;
-    color       : #546e7a;
+    font-family : "Roboto",
+      sans-serif;
+    color: #546e7a;
   }
 
   &__star {
     padding-right: 30px;
     font-size    : 1.2rem;
-    font-weight  : 400;
-    color        : #263238;
+    font-family  : "Roboto",
+      sans-serif;
+    font-weight: 400;
+    color      : #263238;
   }
 }
 
@@ -457,38 +475,195 @@ $bgcolor:#263238; //цвет футера и меню
     }
   }
 
-  /* Стрелка */
-  .slick-arrow {
-    position : absolute;
-    top      : 50%;
-    margin   : -45px 0px 0px 0px;
-    z-index  : 10;
-    font-size: 0; //убираем надписи на кнопках
-    width    : 20px;
-    height   : 60px;
+
+}
+
+//====================================================================================================
+//sections advantages
+//====================================================================================================
+.advantages {
+  background-color   : #263238;
+  // padding         : 120px 0px;
+  padding            : 124px 0px 109px 0px;
+
+  &__title {
+    color         : #fff;
+    padding-bottom: 45px;
   }
 
-  /* Стрелка влево */
-  .slick-arrow.slick-prev {
-    background: url("../img/icon/sl-arrow_l.svg") 0 0 / 100% no-repeat;
-    left      : 0;
+  &__row {
+    display: flex;
   }
 
-  /* Стрелка вправо */
-  .slick-arrow.slick-next {
-    background: url("../img/icon/sl-arrow_r.svg") 0 0 / 100% no-repeat;
-    right     : 0;
+  &__column {
+    padding-top       : 45px;
+    flex              : 0 1 33.3333%;
+    // justify-content: center;
   }
 
-  /* Стрелка не активная */
-  .slick-arrow.slick-disabled {
-    opacity: 0.4;
+  &__item {
+    cursor     : pointer;
+    align-items: center;
+    padding    : 0px 25px;
+    text-align : center;
+
+
+    &:hover {
+      .advantages__icon {
+        background-color: #8bc34a;
+      }
+
+      .advantages__subtitle {
+        color: #8bc34a;
+      }
+
+      .lni-gift,
+      .lni-lock-alt,
+      .lni-heart {
+        color: #fff;
+      }
+    }
+  }
+
+  &__icon {
+    display         : flex;
+    justify-content : center;
+    align-items     : center;
+    height          : 112px;
+    width           : 112px;
+    border-radius   : 50%;
+    background-color: #fff;
+    margin          : 0px auto;
+    @include anim(0.3s, 0s);
+
+    .lni-gift,
+    .lni-lock-alt,
+    .lni-heart {
+      font-size: 7rem;
+      color    : #000;
+    }
+
+    .lni-heart {
+      margin-top: 10px;
+    }
+  }
+
+  &__subtitle {
+    padding-top: 35px;
+    font-size  : 2.4rem;
+    font-family: "Roboto", sans-serif;
+    color      : #ffffff;
+    @include anim(0.3s, 0s);
+
+
+  }
+
+
+
+  &__text {
+    padding-top: 25px;
+    font-size  : 1.5rem;
+    font-family: "Roboto",
+      sans-serif;
+    color      : #b0bec5;
+    line-height: 24px;
   }
 }
 
 //====================================================================================================
-//section 
 //====================================================================================================
+//section author
+//====================================================================================================
+.author {
+  min-height     : 761px;
+  position       : relative;
+  display        : flex;
+  justify-content: center;
+  align-items    : center;
+
+  &__box {
+    max-width       : 660px;
+    min-height      : 210px;
+    width           : 100%;
+    display         : flex;
+    justify-content : center;
+    align-items     : center;
+    background-color: #8bc34a;
+  }
+
+  &__title {
+    // padding    : 0px 60px 0px 65px;
+    font-size   : 3rem;
+    font-family : "Roboto", sans-serif;
+    color       : #ffffff;
+    max-width   : 280px;
+    margin-left : 61px;
+    margin-right: 49px;
+
+    span {
+      font-weight: 700;
+    }
+  }
+
+  &__link {
+    padding         : 25px 39px;
+    margin-right    : 50px;
+    background-color: #fff;
+    font-size       : 1.8rem;
+    font-family     : "Roboto", sans-serif;
+    color           : #263238;
+  }
+
+
+  &__image {
+    position: absolute;
+    top     : 0;
+    left    : 0;
+    width   : 100%;
+    height  : 100%;
+    z-index : -1;
+  }
+}
+
+//====================================================================================================
+//section tutorial
+//====================================================================================================
+.tutorial {
+  padding: 65px 0px 120px 0px;
+
+  &__title {
+    margin: 0px 0px 55px 0px;
+  }
+
+  &__row {
+    display        : flex;
+    flex-wrap      : wrap;
+    justify-content: space-between;
+    align-items    : center;
+  }
+
+  &__item {
+    padding: 10px 0px 0px 0px;
+  }
+
+  &__image {
+    min-height: 270px;
+    min-width : 370px;
+  }
+
+  &__descr {
+    font-size: 2.4rem;
+    font-family: "Roboto",
+      sans-serif;
+    color           : #263238;
+    font-weight     : 700;
+    padding         : 40px 10px;
+    text-align      : center;
+    background-color: #f8f8f8;
+  }
+}
+
+
 
 //====================================================================================================
 //section 
