--- a/#sources/scss/style.scss
+++ b/#sources/scss/style.scss
@@ -517,9 +517,9 @@ $bgcolor:#263238; //цвет футера и меню
         color: #8bc34a;
       }
 
-      .lni-gift,
-      .lni-lock-alt,
-      .lni-heart {
+      .icon-gift,
+      .icon-lock,
+      .icon-heart-o {
         color: #fff;
       }
     }
@@ -536,14 +536,14 @@ $bgcolor:#263238; //цвет футера и меню
     margin          : 0px auto;
     @include anim(0.3s, 0s);
 
-    .lni-gift,
-    .lni-lock-alt,
-    .lni-heart {
+    .icon-gift,
+    .icon-lock,
+    .icon-heart-o {
       font-size: 7rem;
       color    : #000;
     }
 
-    .lni-heart {
+    .icon-heart-o {
       margin-top: 10px;
     }
   }
@@ -666,8 +666,217 @@ $bgcolor:#263238; //цвет футера и меню
 
 
 //====================================================================================================
-//section 
+//section footer
 //====================================================================================================
+.footer {
+  background-color: #263238;
+  padding         : 100px 0px 90px 0px;
+
+  &__row {
+    display        : flex;
+    justify-content: space-between;
+  }
+
+  &__column {
+    max-width: 270px;
+  }
+
+  &__item {}
+
+  &__title {
+    padding : 15px 0px 25px 0px;
+    position: relative;
+
+    &::after {
+      content         : '';
+      position        : absolute;
+      bottom          : 0;
+      left            : 2px;
+      width           : 50px;
+      height          : 3px;
+      background-color: #8bc34a;
+    }
+  }
+
+  &__content {}
+
+  &__text {
+    padding    : 35px 0px 0px 0px;
+    font-size  : 1.5rem;
+    font-family: "Roboto", sans-serif;
+    color      : #b7c3c8;
+    line-height: 24px;
+  }
+
+
+  &__contacts {
+    font-size: 1.4rem;
+    font-family: "Lato",
+      sans-serif;
+    font-weight: 600;
+    color      : #ffffff;
+    line-height: 24px;
+  }
+
+  &__marker {
+    display : block;
+    padding : 35px 0px 0px 30px;
+    position: relative;
+
+    &::before {
+      content    : '\f041';
+      font-size  : 1.8rem;
+      font-family: icomoon;
+      color      : #8bc34a;
+      position   : absolute;
+      left       : 0;
+    }
+
+  }
+
+  &__phone {
+    display : block;
+    padding : 25px 0px 0px 30px;
+    position: relative;
+
+    &::before {
+      content    : '\f095';
+      font-size  : 1.8rem;
+      font-family: icomoon;
+      color      : #8bc34a;
+      position   : absolute;
+      left       : 0;
+    }
+  }
+
+  &__menu {
+    padding: 35px 0px 0px 0px;
+  }
+
+  &__list {
+    font-size  : 1.5rem;
+    font-family: "Roboto", sans-serif;
+    color      : #b7c3c8;
+
+    li+li {
+      margin-top: 25px;
+    }
+  }
+
+  .social {
+    &__link {
+      display: flex;
+
+      li+li {
+        margin-left: 7px;
+      }
+    }
+  }
+
+
+  &__link {
+    position    : relative;
+    padding-left: 20px;
+
+    &::before {
+      content    : '\f105';
+      font-size  : 1.8rem;
+      font-family: icomoon;
+      color      : #8bc34a;
+      position   : absolute;
+      left       : 0;
+      top        : -2px;
+    }
+  }
+
+  &__social {
+    padding: 35px 0px 0px 0px;
+  }
+
+  &__email {
+    position: relative;
+
+    input {
+      display     : block;
+      width       : 100%;
+      height      : 37px;
+      max-width   : 215px;
+      color       : #fff;
+      margin-right: 25px;
+      padding     : 0px 50px 0px 15px;
+
+      background-color: #2f3c43;
+
+
+      &::after {}
+
+      &::placeholder {
+        font-size  : 1.4rem;
+        font-family: "Roboto", sans-serif;
+        color      : #697378;
+      }
+    }
+
+    button {
+      position        : absolute;
+      background-color: #8bc34a;
+      right           : 0px;
+      top             : 75px;
+      height          : 37px;
+      width           : 40px;
+
+      &::before {
+        content    : '\f124';
+        position   : absolute;
+        font-size  : 2rem;
+        font-family: icomoon;
+        color      : #fff;
+        top        : 8px;
+        right      : 11px;
+      }
+    }
+  }
+
+  &__bottom {
+    background-color: #263238;
+    border          : 1px solid #424d53;
+
+
+  }
+
+
+
+  &__copy {
+    font-size  : 1.5rem;
+    font-family: "Roboto", sans-serif;
+    color      : #919699;
+    text-align : center;
+    padding    : 25px 0px 30px 0px;
+  }
+}
+
+
+
+.footer-title {
+  font-size  : 2.2rem;
+  font-family: "Raleway";
+  color      : #ffffff;
+  font-weight: 700;
+}
+
+
+
+.email {
+
+  &__title {
+    padding    : 35px 0px 20px 0px;
+    font-size  : 2rem;
+    font-family: "Roboto", sans-serif;
+    color      : #ffffff;
+  }
+}
+
+
 
 //====================================================================================================
 //section 
