--- a/css/style.css
+++ b/css/style.css
@@ -963,12 +963,6 @@ template {
   font-weight: 900;
   font-style: italic;
 }
-@font-face {
-  font-family: "LineIcons";
-  src: url("../fonts/lineicons/LineIcons.woff2") format("woff2"), url("../fonts/lineicons/LineIcons.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
 #toTop {
   z-index: 500;
   display: none;
@@ -1459,9 +1453,9 @@ template {
 .advantages__item:hover .advantages__subtitle {
   color: #8bc34a;
 }
-.advantages__item:hover .lni-gift,
-.advantages__item:hover .lni-lock-alt,
-.advantages__item:hover .lni-heart {
+.advantages__item:hover .icon-gift,
+.advantages__item:hover .icon-lock,
+.advantages__item:hover .icon-heart-o {
   color: #fff;
 }
 .advantages__icon {
@@ -1482,13 +1476,13 @@ template {
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
-.advantages__icon .lni-gift,
-.advantages__icon .lni-lock-alt,
-.advantages__icon .lni-heart {
+.advantages__icon .icon-gift,
+.advantages__icon .icon-lock,
+.advantages__icon .icon-heart-o {
   font-size: 7rem;
   color: #000;
 }
-.advantages__icon .lni-heart {
+.advantages__icon .icon-heart-o {
   margin-top: 10px;
 }
 .advantages__subtitle {
@@ -1597,6 +1591,190 @@ template {
   padding: 40px 10px;
   text-align: center;
   background-color: #f8f8f8;
+}
+
+.footer {
+  background-color: #263238;
+  padding: 100px 0px 90px 0px;
+}
+.footer__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.footer__column {
+  max-width: 270px;
+}
+.footer__title {
+  padding: 15px 0px 25px 0px;
+  position: relative;
+}
+.footer__title::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 2px;
+  width: 50px;
+  height: 3px;
+  background-color: #8bc34a;
+}
+.footer__text {
+  padding: 35px 0px 0px 0px;
+  font-size: 1.5rem;
+  font-family: "Roboto", sans-serif;
+  color: #b7c3c8;
+  line-height: 24px;
+}
+.footer__contacts {
+  font-size: 1.4rem;
+  font-family: "Lato", sans-serif;
+  font-weight: 600;
+  color: #ffffff;
+  line-height: 24px;
+}
+.footer__marker {
+  display: block;
+  padding: 35px 0px 0px 30px;
+  position: relative;
+}
+.footer__marker::before {
+  content: "";
+  font-size: 1.8rem;
+  font-family: icomoon;
+  color: #8bc34a;
+  position: absolute;
+  left: 0;
+}
+.footer__phone {
+  display: block;
+  padding: 25px 0px 0px 30px;
+  position: relative;
+}
+.footer__phone::before {
+  content: "";
+  font-size: 1.8rem;
+  font-family: icomoon;
+  color: #8bc34a;
+  position: absolute;
+  left: 0;
+}
+.footer__menu {
+  padding: 35px 0px 0px 0px;
+}
+.footer__list {
+  font-size: 1.5rem;
+  font-family: "Roboto", sans-serif;
+  color: #b7c3c8;
+}
+.footer__list li + li {
+  margin-top: 25px;
+}
+.footer .social__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.footer .social__link li + li {
+  margin-left: 7px;
+}
+.footer__link {
+  position: relative;
+  padding-left: 20px;
+}
+.footer__link::before {
+  content: "";
+  font-size: 1.8rem;
+  font-family: icomoon;
+  color: #8bc34a;
+  position: absolute;
+  left: 0;
+  top: -2px;
+}
+.footer__social {
+  padding: 35px 0px 0px 0px;
+}
+.footer__email {
+  position: relative;
+}
+.footer__email input {
+  display: block;
+  width: 100%;
+  height: 37px;
+  max-width: 215px;
+  color: #fff;
+  margin-right: 25px;
+  padding: 0px 50px 0px 15px;
+  background-color: #2f3c43;
+}
+.footer__email input::-webkit-input-placeholder {
+  font-size: 1.4rem;
+  font-family: "Roboto", sans-serif;
+  color: #697378;
+}
+.footer__email input::-moz-placeholder {
+  font-size: 1.4rem;
+  font-family: "Roboto", sans-serif;
+  color: #697378;
+}
+.footer__email input:-ms-input-placeholder {
+  font-size: 1.4rem;
+  font-family: "Roboto", sans-serif;
+  color: #697378;
+}
+.footer__email input::-ms-input-placeholder {
+  font-size: 1.4rem;
+  font-family: "Roboto", sans-serif;
+  color: #697378;
+}
+.footer__email input::placeholder {
+  font-size: 1.4rem;
+  font-family: "Roboto", sans-serif;
+  color: #697378;
+}
+.footer__email button {
+  position: absolute;
+  background-color: #8bc34a;
+  right: 0px;
+  top: 75px;
+  height: 37px;
+  width: 40px;
+}
+.footer__email button::before {
+  content: "";
+  position: absolute;
+  font-size: 2rem;
+  font-family: icomoon;
+  color: #fff;
+  top: 8px;
+  right: 11px;
+}
+.footer__bottom {
+  background-color: #263238;
+  border: 1px solid #424d53;
+}
+.footer__copy {
+  font-size: 1.5rem;
+  font-family: "Roboto", sans-serif;
+  color: #919699;
+  text-align: center;
+  padding: 25px 0px 30px 0px;
+}
+
+.footer-title {
+  font-size: 2.2rem;
+  font-family: "Raleway";
+  color: #ffffff;
+  font-weight: 700;
+}
+
+.email__title {
+  padding: 35px 0px 20px 0px;
+  font-size: 2rem;
+  font-family: "Roboto", sans-serif;
+  color: #ffffff;
 }
 
 /*==========  Desktop First Method  ==========*/
